objects/SystemMutedValidationRules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountRanking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountRanking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdClaimChangeLog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AdClaimChangeLog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdClaim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AdClaim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalAccountFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AdditionalAccountFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalCaseFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AdditionalCaseFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalContactFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AdditionalContactFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalProductLoginFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AdditionalProductLoginFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingScheduleLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all validations for the Volume/Variable Billing Line Item object will be disabled.</description>
        <inlineHelpText>If checked, all validations for the Volume/Variable Billing Line Item object will be disabled.</inlineHelpText>
        <label>BillingScheduleLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeLog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ChangeLog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContractAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractLineItemSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContractLineItemSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all validations for the Contract line item object will be disabled.</description>
        <inlineHelpText>If checked, all validations for the Contract line item object will be disabled.</inlineHelpText>
        <label>ContractLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all validations for contract object will be disabled.</description>
        <inlineHelpText>If checked, all validations for contract object will be disabled.</inlineHelpText>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all validations for the Lead object will be disabled.</description>
        <inlineHelpText>If checked, all validations for the Lead object will be disabled.</inlineHelpText>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MailingList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MailingList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterAgreementExhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MasterAgreementExhibit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OpportunityLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OrderRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLCJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PLCJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PriceIncreaseDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductEntitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProductEntitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductExtensions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProductExtensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalatRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RenewalatRisk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPGReferralLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPGReferralLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPGReferral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPGReferral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurveyResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SurveyResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriageCriteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TriageCriteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all validations for the WorkOrder/Field Service Activity object will be disabled.</description>
        <inlineHelpText>If checked, all validations for the WorkOrder/Field Service Activity object will be disabled.</inlineHelpText>
        <label>WorkOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WorkRequestForm</label>
        <type>Checkbox</type>
    </fields>
    <label>System Muted Validation Rules</label>
</CustomObject>